RESOLVED FIXED75027
AX: Title attribute should not be used in AXTitle
https://bugs.webkit.org/show_bug.cgi?id=75027
Summary AX: Title attribute should not be used in AXTitle
chris fleizach
Reported 2011-12-21 12:07:37 PST
WebKit is exposing the @title as the AXTitle and AXHelp. It should only be exposing @title as AXHelp
Attachments
patch (14.82 KB, patch)
2011-12-21 15:00 PST, chris fleizach
darin: review+
chris fleizach
Comment 1 2011-12-21 13:44:57 PST
chris fleizach
Comment 2 2011-12-21 15:00:45 PST
WebKit Review Bot
Comment 3 2011-12-21 15:02:40 PST
Attachment 120225 [details] did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 Updating OpenSource First, rewinding head to replay your work on top of it... Applying: Inform the scrolling coordinator when scrollbar layers come and go Using index info to reconstruct a base tree... <stdin>:474806: trailing whitespace. [Chromium] DatabaseTrackerChromium: iterating DatabaseSet races with Database disposal on worker thread <stdin>:474827: trailing whitespace. Nothing to test, just removing redundant code. Correct behavior tested by <stdin>:475346: trailing whitespace. warning: 3 lines add whitespace errors. Falling back to patching base and 3-way merge... warning: too many files (created: 167249 deleted: 3), skipping inexact rename detection Auto-merging LayoutTests/ChangeLog CONFLICT (content): Merge conflict in LayoutTests/ChangeLog Auto-merging LayoutTests/platform/chromium/test_expectations.txt Auto-merging Source/WebCore/ChangeLog CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog Auto-merging Source/WebCore/rendering/RenderLayerCompositor.cpp CONFLICT (content): Merge conflict in Source/WebCore/rendering/RenderLayerCompositor.cpp Auto-merging Source/WebKit2/ChangeLog CONFLICT (content): Merge conflict in Source/WebKit2/ChangeLog Auto-merging Tools/ChangeLog CONFLICT (content): Merge conflict in Tools/ChangeLog Auto-merging Tools/Scripts/build-webkit Auto-merging Tools/Scripts/webkitdirs.pm CONFLICT (content): Merge conflict in Tools/Scripts/webkitdirs.pm Failed to merge in the changes. Patch failed at 0001 Inform the scrolling coordinator when scrollbar layers come and go When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 158. If any of these errors are false positives, please file a bug against check-webkit-style.
Darin Adler
Comment 4 2011-12-21 21:41:06 PST
Comment on attachment 120225 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=120225&action=review > Source/WebCore/accessibility/AccessibilityTableCell.h:60 > + // if a table cell is not exposed as a table cell, a TH element can > + // serve as its title ui element We use sentence style in WebKit comments. // If a table cell is not exposed as a table cell, a TH element can serve as its title UI element. > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:1690 > + return hasTextAlternative() ? true : false; There is no need to say "? true : false".
chris fleizach
Comment 5 2011-12-22 09:25:42 PST
Note You need to log in before you can comment on or make changes to this bug.